--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Saquib Fitness</title>
 </head>
 <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../1 GYM/css/style.css">
+<link rel="stylesheet" href="./css/style.css">
 
 <!--
 
