--- a/index.html
+++ b/index.html
@@ -190,24 +190,25 @@
     </div>
     <div class="container">
         <h1>Join the best gym of Purnia now</h1>
-        <form action="noaction.php">
+        <form action="https://api.web3forms.com/submit" method="POST" class="contact-inputs">
+            <input type="hidden" name="access_key" value="aae775a3-af96-41a4-a8c7-45e152609000">
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Name">
+                <input type="text" name="first_name" placeholder="Enter your Name" class="contact-inputs" required>
             </div>
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Age">
+                <input type="text" name="age" placeholder="Enter your Age" class="contact-inputs" required>
             </div>
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Gender">
+                <input type="text" name="gender" placeholder="Enter your Gender" class="contact-inputs" required>
             </div>
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Locality">
+                <input type="text" name="location" placeholder="Enter your Locality" class="contact-inputs" required>
             </div>
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Phone Number">
+                <input type="text" name="contact_no" placeholder="Enter your Phone Number" class="contact-inputs" required>
             </div>
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter your E-mail">
+                <input type="email" name="email" placeholder="Enter your E-mail" class="contact-inputs" required>
             </div>
             <button><div class="btn">Submit</div></button>
         </form>
